--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Action Cam",
   "short_name": "ActionCam",
   "description": "A simple action camera web application",
-  "start_url": "/",
+  "start_url": "/Action-cam/index.html",
   "display": "standalone",
   "background_color": "#1a1a1a",
   "theme_color": "#1a1a1a",
