--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "ActionCam",
   "description": "A simple action camera web application",
   "start_url": "/Action-cam/index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#1a1a1a",
   "theme_color": "#1a1a1a",
   "icons": [
